--- a/Suites réelles.tex
+++ b/Suites réelles.tex
@@ -120,7 +120,7 @@ Soit $u \in \mathbb{R}^\mathbb{N}$
 	\item Suites v\'erifiant une relation de r\'ecurrence lin\'eaire d'ordre 2: \\
 		$a \in \mathbb{R}^*, (b,c) \in \mathbb{R}^2\backslash\{0,0\}$. Soit $E$ l'ensemble des suites r\'eelles $u$ telles que:
 		\[\forall n \in \mathbb{N}, au_{n+2} + bu_{n+1} + cu_n = 0\]
-		Soit $P = aX^2 + bX + x$. 3 cas se pr\'esentent:
+		Soit $P = aX^2 + bX + X$. 3 cas se pr\'esentent:
 		\begin{enumerate}
 			\item $P$ admet 2 racines r\'eelles distinctes $q_1, q_2$ alors:
 				\[E = \{n \in \mathbb{N} \mapsto \alpha q_1^n + \beta q_2^n | \alpha, \beta \in \mathbb{R}\}\]
