--- a/Dérivées.tex
+++ b/Dérivées.tex
@@ -53,10 +53,10 @@
 \end{theo}
 
 \begin{theo} D\'eriv\'ee d'une r\'eciproque\\
-	Soit I un intervalle de $\mathbb{R}, x_0 \in I,\ f:I\rightarrow \mathbb{R}$ continue, strictement monotone. On sait que $f$ induit une
-	bijection de I sur $J=f(I)$ dont on note $g$ la r\'eciproque. \\
+	Soit I un intervalle de $\mathbb{R}, x_0 \in I,\ f:I\rightarrow \mathbb{R}$ continue, strictement monotone. \\
+	On sait que $f$ induit une bijection de I sur $J=f(I)$ dont on note $g$ la r\'eciproque. \\
 	On suppose que $f$ est d\'erivable sur I et $f'$ ne s'annule pas. alors, $g$ est d\'erivable sur J et:
-	\[\forall y \in J, g'(y) = \frac{1}{f'(g(y))}\]
+	\[\forall y \in J,\ g'(y) = \frac{1}{f'(g(y))}\]
 \end{theo}
 
 \section{Rolle, TAF}
@@ -80,7 +80,7 @@
 \begin{theo} $ $ \\
 	Soit I un intervalle de $\mathbb{R},\ f \in D(I, \mathbb{R})$
 	\begin{enumerate}
-		\item $f$ es croissante $\Leftrightarrow f' \geq 0$
+		\item $f$ est croissante $\Leftrightarrow f' \geq 0$
 		\item $f' > 0 \Rightarrow $ $f$ strictement croissante
 		\item $f$ strictement croissante $\Leftrightarrow f' \geq 0$ et $Int(\{x\in I /f'(x) = 0\}) = \emptyset$
 	\end{enumerate}
@@ -117,7 +117,7 @@
 
 \subsection{Th\'eor\`emes}
 \begin{theo}
-	Soit I un intervalle de $\mathbb{R}, n \in \mathbb{n}, f,g \in D^n(I, \mathbb{R})$ Alors:
+	Soit I un intervalle de $\mathbb{R}, n \in \mathbb{N}, f,g \in D^n(I, \mathbb{R})$ Alors:
 	\begin{enumerate}
 		\item Pour $\lambda \in \mathbb{R}$ \\
 			$\lambda (f + g) \in D^n$ et $(\lambda f + g)^{(n)} = \lambda f^{(n)} + g^{(n)}$
@@ -139,7 +139,7 @@
 	Soit I un intervalle de $\mathbb{R}, n \in \mathbb{N}, x_0 \in I, f:I\backslash\{x_0\} \rightarrow \mathbb{R}$, de classe $C^n$ \\
 	On suppose que $\forall k \in [\![0,n]\!], f^{(k)}$ admet en $x_0$ une limite finie $l_k$. Alors:
 	\begin{align*}
-		f: I &\rightarrow \mathbb{R}\\
+		\tilde{f}: I &\rightarrow \mathbb{R}\\
 		x_0 &\mapsto l_0\\
 		x \neq x_0 &\mapsto f(x)
 	\end{align*}
