--- a/Nombres réels.tex
+++ b/Nombres réels.tex
@@ -1,53 +1,75 @@
 \documentclass[fleqn]{article}
 \usepackage{amssymb}
 \usepackage{amsmath}
+\usepackage{amsthm}
+\usepackage{verbatim}
+\usepackage{booktabs}
 
 \title{Entiers naturels}
 \date{}
+
+\theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
+\theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
+\theoremstyle{definition} \newtheorem*{coro}{Corollaire}
+\theoremstyle{remark} \newtheorem*{rqs}{Remarques}
+\theoremstyle{definition} \newtheorem*{prop}{Propri\'et\'e}
 
 \begin{document}
 \maketitle
 
 \section{Valeur absolue}
-\begin{itemize}
-	\item $|x| \leq a \Leftrightarrow x \leq a$ et $-x \leq a$
-	\item $|xy| = |x||y|$
-	\item In\'egalit\'es triangulaires: \\
-		$|x+y| \leq |x| + |y|$ \\
-		$|x+y| \geq ||x| - |y||$ \\
-		$|x-y| \geq ||x| - |y||$
-\end{itemize}
+\begin{prop} $x,a \in \mathbb{R}$
+	\begin{itemize}
+		\item $|x| \leq a \Leftrightarrow (x \leq a$ et $-x \leq a)$
+		\item $|xy| = |x||y|$
+	\end{itemize}
+\end{prop}
+\begin{prop} In\'egalit\'es triangulaires:
+	\begin{itemize}
+		\item $|x+y| \leq |x| + |y|$
+		\item $|x+y| \geq \big||x| - |y|\big|$
+		\item $|x-y| \geq \big||x| - |y|\big|$
+	\end{itemize}
+\end{prop}
 
 \section{Intervalles de $\mathbb{R}$}
-\begin{itemize}
-	\item Pour $a \in \mathbb{R}, \epsilon > 0$, \\
-		$|x-a| \leq \epsilon \Leftrightarrow x \in [a - \epsilon, a + \epsilon]$ \\
-		$|x-a| < \epsilon \Leftrightarrow x \in ]a - \epsilon, a + \epsilon[$
-	\item Soit $A$ una partie non vide de $\mathbb{R}$. LASSE,
-		\begin{enumerate}
-			\item $A$ est un intervalle
-			\item $\forall x,y \in A, x \leq y \Rightarrow [x,y] \subset A$ ($A$ est convexe)
-		\end{enumerate}
-\end{itemize}
+\begin{defi} Intervalle \\
+	Soit $A$ una partie non vide de $\mathbb{R}$. LASSE,
+	\begin{enumerate}
+		\item $A$ est un intervalle
+		\item $\forall x,y \in A, x \leq y \Rightarrow [x,y] \subset A$ ($A$ est convexe)
+	\end{enumerate}
+\end{defi}
+\begin{prop}
+	Pour $a \in \mathbb{R}, \epsilon > 0$,
+	\[|x-a| \leq \epsilon \Leftrightarrow x \in [a - \epsilon, a + \epsilon]\]
+	\[|x-a| < \epsilon \Leftrightarrow x \in ]a - \epsilon, a + \epsilon[\]
+\end{prop}
 
 \section{Partie entière, propri\'et\'e d'Archim\`ede, densit\'e de $\mathbb{Q}$ dans $\mathbb{R}$}
-\begin{itemize}
-	\item $\mathbb{N}$ n'est pas major\'ee dans $\mathbb{R}$
-	\item Propri\'et\'e d'Archim\`ede: soit $x \in \mathbb{R}, \epsilon \in \mathbb{R}_+^*$, alors: \\
-		Il existe $n \in \mathbb{N}, n\epsilon>x$
-	\item Partie enti\`ere: soit $x \in \mathbb{R}$ alors, \\
-		Il existe un unique $n \in \mathbb{Z}, n \leq x < n+1$ \\
-		$n$ s'appelle la partie enti\`ere de $x$ et se note $E(x)$
-	\item Frac$(x) = x - E(x)$
-	\item Densit\'e de $\mathbb{Q}$ dans $\mathbb{R}$, LASSE:
-		D\'efinition: Soit $A \subset \mathbb{R}$,
-		\begin{enumerate}
-			\item $\forall x \in \mathbb{R}, \forall \epsilon > 0, \exists a \in A, |x-a| \leq \epsilon$
-			\item $\forall \alpha,\beta \in \mathbb{R}, (\alpha < \beta) \Rightarrow A \cap ]\alpha, \beta[ \neq \emptyset$
-		\end{enumerate}
-		Th\'eor\`eme: $\mathbb{Q}$ est dense dans $\mathbb{R}$ \\
-		Corollaire: $\mathbb{R}/\mathbb{Q}$ est dense dans $\mathbb{R}$
-\end{itemize}
+\begin{prop}
+	$\mathbb{N}$ n'est pas major\'ee dans $\mathbb{R}$
+\end{prop}
+\begin{prop} Archim\`ede \\
+	Soit $x \in \mathbb{R}, \epsilon \in \mathbb{R}_+^*$, alors il existe $n \in \mathbb{N},\ n\epsilon>x$
+\end{prop}
+\begin{defi} Partie enti\`ere
+	\begin{itemize}
+		\item Soit $x \in \mathbb{R}$ alors, \\
+			Il existe un unique $n \in \mathbb{Z}, n \leq x < n+1$ \\
+			$n$ s'appelle la partie enti\`ere de $x$ et se note $E(x)$
+		\item Frac$(x) = x - E(x)$
+	\end{itemize}
+\end{defi}
+\begin{defi} Densit\'e \\
+	Soit $A \subset \mathbb{R}$, $A$ est dense dans $\mathbb{R}$ si:
+	\begin{enumerate}
+		\item $\forall x \in \mathbb{R}, \forall \epsilon > 0, \exists\ a \in A,\ |x-a| \leq \epsilon$
+		\item $\forall\ \alpha,\beta \in \mathbb{R}, (\alpha < \beta) \Rightarrow A \cap ]\alpha, \beta[ \neq \emptyset$
+	\end{enumerate}
+	\begin{theo} $\mathbb{Q}$ est dense dans $\mathbb{R}$ \end{theo}
+	\begin{coro} $\mathbb{R}/\mathbb{Q}$ est dense dans $\mathbb{R}$ \end{coro}
+\end{defi}
 
 
 \end{document}
