--- a/Trigonométrie.tex
+++ b/Trigonométrie.tex
@@ -8,6 +8,7 @@
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
 \theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
+\theoremstyle{definition} \newtheorem*{prop}{Propri\'et\'e}
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 \ra{1.3}
 
@@ -16,66 +17,72 @@
 
 \section{Fonctions hyperboliques}
 \begin{defi} $\ $
-		\[ \cosh t = \frac{e^t + e^{-t}}{2} \]
-		\[ \sinh t = \frac{e^t - e^{-t}}{2} \]
+		\[\cosh t = \frac{e^t + e^{-t}}{2},\ \mathbb{R} \rightarrow [1,+\infty]\]
+		\[\sinh t = \frac{e^t - e^{-t}}{2},\ \mathbb{R} \rightarrow \mathbb{R} \]
+		\[\tanh t = \frac{\sinh}{\cosh},\ \mathbb{R} \rightarrow [-1,+1]\]
 \end{defi}
 
-\begin{itemize}
-	\item $\cosh$ est paire, $\sinh$ est impaire, $\tanh$ est impaire
-	\item $ \cosh^2 t - \sinh^2 t = 1 $
-	\item $\cosh$ et $\sinh$ sont d\'{e}rivables sur $\mathbb{R}$: \\
-		$\cosh'$ $ = \sinh$ \\
-		$\sinh'$ $ = \cosh$
-	\item Formules: \\
-		$\cosh (a+b) = \cosh a\cosh b + \sinh a\sinh b$ \\
-		$\sinh (a+b) = \sinh a\cosh b + \sinh b\cosh a$ \\
-		$\cosh (a-b) = \cosh a\cosh b - \sinh a\sinh b$ \\
-		$\sinh (a-b) = \sinh a\cosh b - \sinh b\cosh a$ \\
-		$\cosh^2 a = \frac{\cosh 2a + 1}{2}$ \\
-		$\sinh^2 a = \frac{\cosh 2a - 1}{2}$ \\
-\end{itemize}
+\begin{prop} $ $
+	\begin{itemize}
+		\item $\cosh$ est paire, $\sinh$ est impaire, $\tanh$ est impaire
+		\item $ \cosh^2 t - \sinh^2 t = 1 $
+		\item $\cosh$ et $\sinh$ sont d\'{e}rivables sur $\mathbb{R}$: \\
+			$\cosh'$ $ = \sinh$ \\
+			$\sinh'$ $ = \cosh$
+	\end{itemize}
+\end{prop}
+\begin{prop} Formules
+	\begin{itemize}
+			\item $\cosh (a+b) = \cosh a\cosh b + \sinh a\sinh b$
+			\item $\sinh (a+b) = \sinh a\cosh b + \sinh b\cosh a$
+			\item $\cosh (a-b) = \cosh a\cosh b - \sinh a\sinh b$
+			\item $\sinh (a-b) = \sinh a\cosh b - \sinh b\cosh a$
+			\item $\cosh^2 a = \frac{\cosh 2a + 1}{2}$
+			\item $\sinh^2 a = \frac{\cosh 2a - 1}{2}$
+	\end{itemize}
+\end{prop}
 
 \section{Fonctions cosinus, sinus, tangente}
 \subsection{Cosinus et sinus}
-\begin{itemize}
-	\item valeurs remarquables:\\
-		\begin{tabular}{@{}lrrrrrrrrr@{}}
-			\toprule
-			t & 0 & $\frac{\Pi}{6}$ & $\frac{\Pi}{4}$ & $\frac{\Pi}{3}$ & $\frac{\Pi}{2}$ & $\frac{2\Pi}{3}$ & $\frac{3\Pi}{4}$
-				& $\frac{5\Pi}{6}$ & $\Pi$ \\
-			\hline
-			$\cos t$ & 1 & $\frac{\sqrt{3}}{2}$ & $\frac{\sqrt{2}}{2}$ & $\frac{1}{2}$ & 0 & $-\frac{1}{2}$ & $-\frac{\sqrt{2}}{2}$
-				& $-\frac{\sqrt{3}}{2}$ & -1 \\
-			$\sin t$ & 0 & $\frac{1}{2}$ & $\frac{\sqrt{2}}{2}$ & $\frac{\sqrt{3}}{2}$ & 1 & $\frac{\sqrt{3}}{2}$ & $\frac{\sqrt{2}}{2}$
-				& $\frac{1}{2}$ & 0 \\
-			\bottomrule
-		\end{tabular}
+\begin{prop} valeurs remarquables\\
+	\begin{tabular}{@{}lrrrrrrrrr@{}}
+		\toprule
+		t & 0 & $\frac{\Pi}{6}$ & $\frac{\Pi}{4}$ & $\frac{\Pi}{3}$ & $\frac{\Pi}{2}$ & $\frac{2\Pi}{3}$ & $\frac{3\Pi}{4}$
+			& $\frac{5\Pi}{6}$ & $\Pi$ \\
+		\hline
+		$\cos t$ & 1 & $\frac{\sqrt{3}}{2}$ & $\frac{\sqrt{2}}{2}$ & $\frac{1}{2}$ & 0 & $-\frac{1}{2}$ & $-\frac{\sqrt{2}}{2}$
+			& $-\frac{\sqrt{3}}{2}$ & -1 \\
+		$\sin t$ & 0 & $\frac{1}{2}$ & $\frac{\sqrt{2}}{2}$ & $\frac{\sqrt{3}}{2}$ & 1 & $\frac{\sqrt{3}}{2}$ & $\frac{\sqrt{2}}{2}$
+			& $\frac{1}{2}$ & 0 \\
+		\bottomrule
+	\end{tabular}
+\end{prop}
 
-	\item Formules: \\
-		$\cos(\arcsin x) = \sin(\arccos x) = \sqrt{1 - x^2}$ \\
-		$\cos (a+b) = \cos a\cos b - \sin a\sin b$ \\
-		$\cos (a-b) = \cos a\cos b + \sin a\sin b$ \\
-		$\sin (a+b) = \sin a\cos b + \sin b\cos a$ \\
-		$\sin (a-b) = \sin a\cos b - \sin b\cos a$ \\
-		$\cos^2 a = \frac{1}{1 + \tan^2a}$ \\
-		$\cos^2 a = \frac{1 + \cos 2a}{2}$ \\
-		$\sin^2 a = \frac{1 - \cos 2a}{2}$ \\
+\begin{prop} Formules
+	\begin{itemize}
+		\item $\cos(\arcsin x) = \sin(\arccos x) = \sqrt{1 - x^2}$
+		\item $\cos (a+b) = \cos a\cos b - \sin a\sin b$
+		\item $\cos (a-b) = \cos a\cos b + \sin a\sin b$
+		\item $\sin (a+b) = \sin a\cos b + \sin b\cos a$
+		\item $\sin (a-b) = \sin a\cos b - \sin b\cos a$
+		\item $\cos^2 a = \frac{1}{1 + \tan^2a} = \frac{1 + \cos 2a}{2}$
+		\item $\sin^2 a = \frac{1 - \cos 2a}{2}$
 		\newline
-		$\cos p + \cos q = 2\cos\frac{p+q}{2}\cos\frac{p-q}{2}$ \\
-		$\cos p - \cos q = -2\sin\frac{p+q}{2}\sin\frac{p-q}{2}$ \\
-		$\sin p + \sin q = 2\sin\frac{p+q}{2}\cos\frac{p-q}{2}$ \\
-		$\sin p - \sin q = 2\sin\frac{p-q}{2}\cos\frac{p+q}{2}$ \\
+		\item $\cos p + \cos q = 2\cos\frac{p+q}{2}\cos\frac{p-q}{2}$
+		\item $\cos p - \cos q = -2\sin\frac{p+q}{2}\sin\frac{p-q}{2}$
+		\item $\sin p + \sin q = 2\sin\frac{p+q}{2}\cos\frac{p-q}{2}$
+		\item $\sin p - \sin q = 2\sin\frac{p-q}{2}\cos\frac{p+q}{2}$
+	\end{itemize}
+\end{prop}
 
-	\item $u = \tan \frac{t}{2}$\\
-		$\sin t = \frac{2u}{1+u^2}$\\
-		$\tan t = \frac{2u}{1-u^2}$\\
-		$\cos t = \frac{1-u^2}{1+u^2}$
-
-\end{itemize}
+\begin{prop} $u = \tan \frac{t}{2}$
+	\[\sin t = \frac{2u}{1+u^2}\]
+	\[\tan t = \frac{2u}{1-u^2}\]
+	\[\cos t = \frac{1-u^2}{1+u^2}\]
+\end{prop}
 
 \subsection{Tangente}
-\begin{itemize}
-	\item Valeurs remarquables: \\
+\begin{prop} Valeurs remarquables\\
 	\begin{tabular}{lrrrr}
 		\toprule
 		t        & 0 & $\frac{\Pi}{6}$      & $\frac{\Pi}{4}$ & $\frac{\Pi}{3}$ \\
@@ -83,15 +90,18 @@
 		$\tan t$ & 0 & $\frac{1}{\sqrt{3}}$ & 1               & $\sqrt{3}$ \\
 		\bottomrule
 	\end{tabular}
+\end{prop}
 
-	\item Formules: \\
-	$\tan (\Pi-t) = -\tan t$ \\
-	$\tan (\frac{\Pi}{2} - t) = \frac{1}{\tan t} $ \\
-	\newline
-	$\tan' t = \frac{1}{\cos^2 t} = 1 + \tan^2 t$ \\
-	$\tan (a+b) = \frac{\tan a + \tan b}{1 - \tan a\tan b}$ \\
-	$\tan (a-b) = \frac{\tan a - \tan b}{1 + \tan a\tan b}$ \\
-\end{itemize}
+\begin{prop} Formules
+	\begin{itemize}
+		\item $\tan (\Pi-t) = -\tan t$
+		\item $\tan (\frac{\Pi}{2} - t) = \frac{1}{\tan t}$
+		\newline
+		\item $\tan' t = \frac{1}{\cos^2 t} = 1 + \tan^2 t$
+		\item $\tan (a+b) = \frac{\tan a + \tan b}{1 - \tan a\tan b}$
+		\item $\tan (a-b) = \frac{\tan a - \tan b}{1 + \tan a\tan b}$
+	\end{itemize}
+\end{prop}
 
 \section{Fonctions trigonom\'etriques inverses}
 \begin{theo}
@@ -120,5 +130,15 @@ Pour \(y \in ]-1,1[, \arccos'(y) = -\frac{1}{\sqrt{1-y^2}}\) \\
 \(Arctan: [-\frac{\Pi}{2},\frac{\Pi}{2}] \rightarrow \mathbb{R}\) \\
 \(\arctan\) est impaire continue et strictement croissante \\
 Pour \(y \in \mathbb{R}, \arctan'(y) = \frac{1}{1+y^2}\) \\
+
+\section{Astuces}
+\begin{prop} Soient $a,b \in \mathbb{R}$ tels que $a^2 + b^2 = 1$\\
+	Alors il existe $\theta \in \mathbb{R}$ tel que $a = \cos \theta$ et $b = \sin \theta$
+\end{prop}
+
+\begin{prop} Aplitude/phase \\
+	Soient $\lambda, \mu \in \mathbb{R}$, il existe $A \geq 0,\ \varphi \in \mathbb{R}$ tels que:
+	\[\forall t \in \mathbb{R},\ \lambda \cos t + \mu \sin t = A\cos(t - \varphi)\]
+\end{prop}
 
 \end{document}
